--- a/.env.testing
+++ b/.env.testing
@@ -1,7 +1,40 @@
+APP_NAME=Laravel
+APP_ENV=staging
+APP_KEY=base64:ytqaly7kW+D4V3PXqmEV6AiI/aT3HXQmiNKxUtQHLOY=
+APP_DEBUG=true
+
+APP_URL=http://localhost
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=territorios_test
+DB_DATABASE=dev_telefones
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=senha
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
